@@ -16,6 +16,10 @@ o [GH#1451] Nmap now performs forward DNS lookups in parallel, using the same
 o [GH#2571, GH#2572, GH#2622, GH#2784] Various bug fixes in the mssql NSE
   library [johnjaylward, nnposter]
 
+o [GH#2901, GH#2744, GH#2745] Arbitrary separator in stdnse.tohex() is now
+  supported. Script smb-protocols now reports SMB dialects correctly.
+  [nnposter]
+
 o [GH#2900, GH#2896, GH#2897] Nmap is now able to scan IP protocol 255.
   [nnposter]
 
